<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_margin="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:text="@string/tv_time"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/item_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_current_weather_img"
        app:srcCompat="@mipmap/ic_launcher"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="72dp"
        android:layout_height="22dp"
        android:text="@string/tv_temp"
        android:gravity="center" />
</LinearLayout>